--- a/webapp/WEB-INF/views/course/c_viewForm.html
+++ b/webapp/WEB-INF/views/course/c_viewForm.html
@@ -46,7 +46,7 @@
 					<h2>코스제목</h2>
 					<a href=""><span class="glyphicon glyphicon-pencil"></span></a>
 					
-					<a href=""><img alt="즐겨찾기" src="../../../assets/image/main/star-off.png"></a>
+					<img class="right" alt="즐겨찾기" src="../../../assets/image/main/star-off.png">
 					
 					<div class="article-info">
 						<span class="bold">박깜이</span>
@@ -56,7 +56,7 @@
 					</div>
 					
 					<div class="article-container">
-						<div>
+						<div class="left">
 							<img alt="산책" src="../../../assets/image/course/walk.png">
 							<span>산책</span>
 							
@@ -72,27 +72,40 @@
 							<span>그림</span> -->
 						</div>
 						
-						<div>
-							
+						<div class="right">
+							<img alt="시간" src="../../../assets/image/course/time.png">
+							<span>30분</span>
+						</div>
+						
+						<div class="left">
+							<img alt="거리" src="../../../assets/image/course/distance.png">
+							<span>2 km</span>
+						</div>
+						
+						<div class="right">
+							<img alt="난이도" src="../../../assets/image/course/difficulty.png">
+							<span>어려움</span>
 						</div>
 					</div>
 				</div>
 				
-				<div class="course-stats">
-					<h2>일기 작성 현황</h2>
+				<div class="record-status">
+					<h3>일기 작성 현황</h3>
 					
-					<div class="graph-doughnut">
-						<p>난이도</p>
-					</div>
-					
-					<div class="graph-bar">
-						<p>종목</p>
+					<div class="graph">
+						<div class="graph-doughnut left">
+							<p>난이도</p>
+						</div>
+						
+						<div class="graph-bar right">
+							<p>종목</p>
+						</div>
 					</div>
 				</div>
 				
 				<div id="course-info-btn">
-					<button>후기 보러가기</button>
-					<button>♡ 0</button>
+					<button class="link-btn">후기 보러가기</button>
+					<button class="like-btn"><img src="../../../assets/image/main/heart-off.png"> 0</button>
 				</div>
 			</div>
 		</div>
