--- a/webapp/WEB-INF/views/course/r_writeForm.html
+++ b/webapp/WEB-INF/views/course/r_writeForm.html
@@ -212,7 +212,8 @@
 				<div>
 					<img src="../../../assets/image/course/photo.png">
 					<p>코스와 관련된 사진을 등록해주세요.</p>
-					<button>사진 추가하기</button>
+					<label for="input-file">사진 추가하기</label>
+					<input type="file" id="input-file">
 				</div>
 			</div>
 		</div>
