--- a/webapp/WEB-INF/views/best/best.html
+++ b/webapp/WEB-INF/views/best/best.html
@@ -3,22 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet" href="../../../assets/css/best.css" type="text/css">
+<link rel="stylesheet" href="../../../assets/css/best.css"
+	type="text/css">
 
 
 </head>
 <body>
 
 	<div id="header">
-		<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
-		
+		<a href="../main/index.html"><img id="logo"
+			src="../../../assets/image/main/logo.jpg"></a>
+
 		<div id="login">
 			<ul>
 				<li><a href="">회원가입</a></li>
 				<li><a href="">로그인</a></li>
 			</ul>
-		</div> <!-- login -->
-		
+		</div>
+		<!-- login -->
+
 		<div id="nav">
 			<ul>
 				<li><a href="../together/together.html">함깨하기</a></li>
@@ -26,83 +29,88 @@
 				<li><a href="../best/best.html">베스트</a></li>
 				<li><a href="../map/map.html">지도</a></li>
 			</ul>
-		</div> <!-- nav -->
-	</div> 
+		</div>
+		<!-- nav -->
+	</div>
 	<!-- header -->
-		
+
+
+
 	<!-- context -->
-		<p>☆ 좋아요 Best</p>
-		
-			<div style='margin: 0 auto; width: 200px; float: right; text-align: center; border: 0;'>
-   				<a href="" class="Go">Go &gt;</a>
-			</div>
-			
-			<input type='button' class='btn-prev' name='btn-prev' value='<'>
+	<h1>Best</h1>
+
+	<p id="best-title">☆ 좋아요 Best</p>
+	<a href="" id="Go">Go &gt;</a>
+
+	<input type='button' class='btn-prev' name='btn-prev' value='<'>
+	<div class="best-listtext">
+		<div class="best-list">
+			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+			<p id="best-text">지역 | 거리</p>
+		</div>
 	
+		<div class="best-list">
 			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+			<p id="best-text">지역 | 거리</p>
+		</div>
 	
-			<input type='button' class='btn-next' name='btn-next' value='>'>
-			
-			
-		<p>☆ 즐겨찾기 Best</p>
-		
-			<div style='margin: 0 auto; width: 200px; float: right; text-align: center; border: 0;'>
-   				<a href="" class="Go">Go &gt;</a>
-			</div>
-			
-			<input type='button' class='btn-prev' name='btn-prev' value='<'>
-	
+		<div class="best-list">
 			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-	
-			<input type='button' class='btn-next' name='btn-next' value='>'>
-			
-			
-		<p>☆ 기록(후기) Best</p>
-		
-			<div style='margin: 0 auto; width: 200px; float: right; text-align: center; border: 0;'>
-   				<a href="" class="Go">Go &gt;</a>
-			</div>
-			
-			<input type='button' class='btn-prev' name='btn-prev' value='<'>
-	
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-	
-			<input type='button' class='btn-next' name='btn-next' value='>'>
-		<!-- /context -->
+			<p id="best-text">지역 | 거리</p>
+		</div>
+	</div>
+
+	<input type='button' class='btn-next' name='btn-next' value='>'>
+
+
+
+
+
+	<p id="best-title">☆ 즐겨찾기 Best</p>
+	<a href="" id="Go">Go &gt;</a>
+
+	<input type='button' class='btn-prev' name='btn-prev' value='<'>
+
+	<input type='button' class='btn-next' name='btn-next' value='>'>
+
+
+	<p id="best-title">☆ 기록(후기) Best</p>
+	<a href="" id="Go">Go &gt;</a>
+
+	<input type='button' class='btn-prev' name='btn-prev' value='<'>
+
+
+
+	<input type='button' class='btn-next' name='btn-next' value='>'>
+	<!-- /context -->
 
 
 
 	<!-- 푸터 자리 -->
-		<br>
-		<div class="footer">
-			<div class="footer-text">
-				<p>주식회사 조아</p>
-				<p>대표 : 최보승</p>
-				<p>사업자 번호 : 123-456-789</p>
-				<p>서울특별시 관악구 봉천동 862 - 1</p>
-				<br>
-				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
-					공휴일 휴무)</p>
-				<p>tel. 02 - 1111 - 1111</p>
-				<p>fax. 02 - 1111 - 1111</p>
-				<p>email. joa@joa.co.kr</p>
-			</div>
+	<br>
+	<div class="footer">
+		<div class="footer-text">
+			<p>주식회사 조아</p>
+			<p>대표 : 최보승</p>
+			<p>사업자 번호 : 123-456-789</p>
+			<p>서울특별시 관악구 봉천동 862 - 1</p>
 			<br>
-			<div class="footer-btn">
-				<button id="footerbtn" type="button">자주묻는 질문</button>
-				<button id="footerbtn" type="button">1:1 문의</button>
-			</div>
-			<br>
-			<hr class="my-hr1">
-			<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
-
+			<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
+				공휴일 휴무)</p>
+			<p>tel. 02 - 1111 - 1111</p>
+			<p>fax. 02 - 1111 - 1111</p>
+			<p>email. joa@joa.co.kr</p>
 		</div>
-		<!-- /footer -->
+		<br>
+		<div class="footer-btn">
+			<button id="footerbtn" type="button">자주묻는 질문</button>
+			<button id="footerbtn" type="button">1:1 문의</button>
+		</div>
+		<br>
+		<hr class="my-hr1">
+		<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
+
+	</div>
+	<!-- /footer -->
 </body>
 </html>
