--- a/webapp/WEB-INF/views/best/bestplus.html
+++ b/webapp/WEB-INF/views/best/bestplus.html
@@ -3,81 +3,26 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet"  href="/javaStudy/workspace_web/JOA/assets/css/joa.css">
-
-<style>
-
-/* header */
-h1 {
-	font-size: 46px;
-	font-weight: 700;
-	margin: 80px, 0px, 64px, 0px;
-	display: block;
-	}
-
-
-/* list */
-.best-list {
-	display: grid;
-	 grid-template-columns: 200px 200px 200px;
-	 grid-auto-rows: 100px;
-	}
-	
-
-	
-li {
-	display: inline;
-	}
-
-.best-mini-list {
-	font-size: 16px;
-}
-
-/* hr(nav) 라인 */
-.one {
-	width: 1079px;
-	}
-
-/* 이미지 */
-img {
-	width: 350px;
-	height: 280px;
-	}
-
-/* Top1~3 */
-h4 {
-	float:left;
-	margin-right:319px;
-	}
-
-</style>
-
-
+<link rel="stylesheet"  href="../../../assets/css/bestplus.css" type="text/css">
 
 </head>
 <body>
 
 <div id="wrap">
-
 	<h1>Best</h1>
 
-<!-- 
-	<div class="best-list">
-		<ul>
-			<li>좋아요</li>
-			<li>즐겨찾기</li>
-			<li>기록별</li>
-		</ul>
-	</div>	 -->
-	
-	<div class="best-list">
-		<div class="best-list2">좋아요</div>
-		<div class="best-list2">즐겨찾기</div>
-		<div class="best-list2">기록별</div>
-	</div>	
+	<!-- main list -->
+	<table border="1">
+		<tr>
+			<td><a href="">좋아요</a></td>
+			<td><a href="">즐겨찾기</a></td>
+			<td><a href="">기록별</a></td>
+		</tr>
+	</table>
 
+	<!-- 종목테그 -->
 	<div class="best-mini-list">
-		<p>Total : {}</p>
+		<p>총(개) : 15</p>
 
 		<ul>
 			<li><a href="">산책 |</a></li>
@@ -97,9 +42,9 @@ h4 {
 	<div class="img-total">
 	
 		<div class="img-1">
-			<h4>Top1</h4>
-			<h4>Top1</h4>
-			<h4>Top1</h4>
+			<p>Top1<img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\cgold.jpg" /></p>
+			<p>Top2<img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\csilver.jpg" /></p>
+			<p>Top3<img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\cbronze.jpg" /></p>
 		</div>
 		
 		<br><br><br>
