--- a/webapp/WEB-INF/views/my-page/my-course.html
+++ b/webapp/WEB-INF/views/my-page/my-course.html
@@ -40,7 +40,7 @@
 		
 		<div class="subHeader">
 			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
-			<p id="title">나의 코스 보기 <img id="myHome" src="../../../assets/image/my-page/walking.png"></p>
+			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></p>
 		</div>
 		
 		
@@ -55,39 +55,72 @@
 		
 		<div class="resultView">
 			<div class="resultList">
+				<p id="listTitle">나의 코스 보기</p>
 				<ol>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">신나는 코스</p>
-							<p id="courseInfo">2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">22.07.01</p>
+								<p id="courseInfo">조회수2 * 기록8</p>
+						  	</div>
+						</a>
+					</li>
+					<li>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">22.07.01</p>
+								<p id="courseInfo">조회수2 * 기록8</p>
+						  	</div>
+						</a>
+					</li>
+					<li>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">깐따삐야 가는 길</p>
+								<p id="courseInfo">22.07.01</p>
+								<p id="courseInfo">조회수2 * 기록8</p>
+						  	</div>
+					  	</a>
+					</li>
+					<li>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<div id="textBox">
+								<p id="courseName">집에 가는 길</p>
+								<p id="courseInfo">22.07.01</p>
+								<p id="courseInfo">조회수2 * 기록8</p>
+						 	</div>
+						</a>
 					</li>
 					
-					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">구불구불 코스</p>
-							<p id="courseInfo">2022-07-01</p>
-					  	</div>
-					</li>
+					
+					
 					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">ABC</p>
-							<p id="courseInfo">2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<div id="textBox">
+								<p id="courseName">신나는 코스</p>
+								<p id="courseInfo">22.07.01</p>
+								<p id="courseInfo">조회수2 * 기록8</p>
+						  	</div>
+						</a>
 					</li>
-					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-					  	<div id="textBox">
-							<p id="courseName">DEF</p>
-							<p id="courseInfo">2022-07-01</p>
-					  	</div>
+						<a href="">
+						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<div id="textBox">
+								<p id="courseName">이건아닌데...</p>
+								<p id="courseInfo">22.07.01</p>
+								<p id="courseInfo">조회수2 * 기록8</p>
+						  	</div>
+						</a>
 					</li>
-				
 				</ol>
 			</div>
 		</div>
