--- a/webapp/WEB-INF/views/board/writeForm.html
+++ b/webapp/WEB-INF/views/board/writeForm.html
@@ -13,46 +13,42 @@
 	
 		<h1>게시판</h1>
 		
-			<div>
-				<table>
-					<thead>
-						<tr>
-							<th colspan="3" id="board_title">[소통]도림천 다녀오는 길</th>
-						</tr>
-						<tr id="top">
-							<th id="id">신림러</th>
-							<th id="date">2022.07.24</th>
-							<th id="up">조회수: 47</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td colspan="3" id="content">오늘 도림천 다녀오면서 저번에 같이 달리기했던 깜이님 만났어요!<br>
-											그래서 같이 마트도 다녀왔어요~~~~~<br>
-											오늘 날씨 너무 덥고 힘들고 심심했는데 무척 재미있었어요!<br>
-											다음에 같이 또 달리는 날이 있으면 좋겠네요!
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img class="image" src="../../../assets/image/board/window.jpg">
-								<img class="image" src="../../../assets/image/board/flower.jpg">
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div><!-- table -->
-			
-			<br>
-			
-			<div id="writer_btn">
-				<button id="modify">수정</button>
-				<button id="delete">삭제</button>
+		<div id="writebox">
+		
+			<div id="option_line">
+				<p id="option">항목</p>
+				<select id="option_list">
+					<option value="question">질문</option>
+					<option value="commute">소통</option>
+					<option value="post">후기</option>
+					<option value="together">함께</option>
+				</select>
 			</div>
 			
 			<div>
-				댓글
+				<p id="title">제목</p>
+				<input type="text" id="titlebox">
 			</div>
+			
+			<div><input type="text" id="contentbox"></div>
+			
+			<div>
+				<p id="file">파일선택</p>
+				<input type="text" id="filebox">
+				<button>파일첨부</button>
+			</div>
+			
+			<div>
+				<p>코스선택</p>
+				<button>첨부</button>
+			</div>
+			
+			<div>
+				<p>함께하기</p>
+				<button>첨부</button>
+			</div>
+			
+		</div><!-- writebox -->	
 		
 	</div><!-- wrap -->	
 
