--- a/webapp/WEB-INF/views/my-page/my-report.html
+++ b/webapp/WEB-INF/views/my-page/my-report.html
@@ -40,7 +40,7 @@
 		
 		<div class="subHeader">
 			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
-			<p id="title">나의 기록 보기 <img id="myHome" src="../../../assets/image/my-page/diary.png"></p>
+			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></p>
 		</div>
 		
 		
@@ -53,52 +53,57 @@
 		
 		
 		
-		
-		<div class="myReport">
-			<div id="calendar">
-				<p id="calDate">2022년 3월</p>
-				<input id="dateSearch" type="text">&nbsp;<button id="dSearch-btn">날짜조회</button>
-				<div id="calAPI">달력API</div>
-			</div>
-		
-			
-			<div id="reportList">
-				<ul>
-					<li id="listTitle"></li>
-					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-						<p id="contentTitle">내가 여기 왔다감ㅋ</p>
-						<p id="content">링거 맞고 뛰었다^^</p>
-						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
-					</li>
-					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-						<p id="contentTitle">우앙우앙우앙</p>
-						<p id="content">우앙우앙우앙^^</p>
-						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
-					</li>
-					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-						<p id="contentTitle">산책 재밌다</p>
-						<p id="content">산책 다녀왔는데 좋았네</p>
-						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
-					</li>
-					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-						<p id="contentTitle">무더위</p>
-						<p id="content">요즘 날씨 미친거 같다</p>
-						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
-					</li>
-					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-						<p id="contentTitle">살려줘ㅠㅠ</p>
-						<p id="content">html/css너무 귀찮다ㅠㅠ</p>
-						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
-					</li>
-				</ul>
+		<div class="resultView">
+			<div class="resultList">
+				<p id="listTitle">나의 기록 보기</p>
+				<div class="myReport">
+					<div id="calendar">
+						<div id="dateForm">
+							<p id="calDate">2022년 3월</p>
+							<input id="dateSearch" type="date">
+						</div>
+						<div id="calAPI">달력API</div>
+					</div>
+				
+					
+					<div id="reportList">
+						<ul>
+							<li id="listTitle"></li>
+							<li id="contentBox">
+								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+								<p id="contentTitle">내가 여기 왔다감ㅋ</p>
+								<p id="content">링거 맞고 뛰었다^^</p>
+								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+							</li>
+							<li id="contentBox">
+								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+								<p id="contentTitle">우앙우앙우앙</p>
+								<p id="content">우앙우앙우앙^^</p>
+								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+							</li>
+							<li id="contentBox">
+								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+								<p id="contentTitle">산책 재밌다</p>
+								<p id="content">산책 다녀왔는데 좋았네</p>
+								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+							</li>
+							<li id="contentBox">
+								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+								<p id="contentTitle">무더위</p>
+								<p id="content">요즘 날씨 미친거 같다</p>
+								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+							</li>
+							<li id="contentBox">
+								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+								<p id="contentTitle">살려줘ㅠㅠ</p>
+								<p id="content">html/css너무 귀찮다ㅠㅠ</p>
+								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+							</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
-		
 		
 		
 		
