글쓰기폼 중간 단계

--- a/webapp/WEB-INF/views/board/writeForm.html
+++ b/webapp/WEB-INF/views/board/writeForm.html
@@ -25,32 +25,33 @@
 				</select>
 			</div>
 			
-			<div>
+			<div id="title_line">
 				<p id="title">제목</p>
 				<input type="text" id="titlebox">
 			</div>
 			
-			<div><input type="text" id="contentbox"></div>
+			<div id="content_line"><input type="text" id="contentbox"></div>
 			
-			<div>
+			<div id="file_line">
 				<p id="file">파일선택</p>
-				<input type="text" id="filebox">
-				<button>파일첨부</button>
+				<input type="file" id="filebox">
 			</div>
 			
-			<div>
-				<p>코스선택</p>
-				<button>첨부</button>
+			<div id="course_line">
+				<p id="course">코스선택</p>
+				<button id="course_choice">코스 불러오기</button>
 			</div>
 			
-			<div>
-				<p>함께하기</p>
-				<button>첨부</button>
+			<div id="together_line">
+				<p id="together">함께하기</p>
+				<button id="together_choice">함께하기 불러오기</button>
 			</div>
 			
 		</div><!-- writebox -->	
 		
 	</div><!-- wrap -->	
+
+	<br><br><br><br><br><br><br>
 
 
 </body>
