--- a/webapp/assets/css/course.css
+++ b/webapp/assets/css/course.css
@@ -111,6 +111,9 @@ label {
 	line-height: 46px;
 	margin-right: 12px;
 }
+label img {
+	vertical-align: middle;
+}
 .box {
 	display: inline-block;
 	text-align: center;
