--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -68,26 +68,26 @@
 /* 마이페이지-나의 기록 *************************************************************/
 /**************************************************************************/
 .myReport {position: absolute; left: 50%; transform: translateX(-50%); display: center; text-align:center; 
-			background-color:lightblue; width:1200px; height:700px; padding:0px 30px;}
+			width:1200px; height:700px; padding:0px 30px;}
 
-.myReport #calendar {float:left; width:750px; background-color:lightyellow; line-height: 50px;}
+.myReport #calendar {float:left; width:750px; line-height: 50px;}
 .myReport #calendar #dateForm {width:750px; height:50px; }
 .myReport #calendar #calDate {font-size: 28px; font-weight:bold; float:left; text-align:left;}
 .myReport #calendar #dateSearch {font-size: 20px; float:right;}
 .myReport #calendar #calAPI {text-align:center; line-height:600px; width:750px; height:600px; border:solid 1px #73AD21; }
 
 
-.myReport #reportList {background-color:lightpink; width:380px; text-align:left; float:right;}
+.myReport #reportList {width:380px; text-align:left; float:right;}
 .myReport #reportList #listTitle {width:380px; height:50px; text-align:center; line-height:50px; margin:0px}
-.myReport #reportList #listTitle #monthReport {background-color:rgb(50, 108, 249); color:white; font-size:20px; float:left; width:190px; border:black 1px solid;}
-.myReport #reportList #listTitle #todayReport {font-size:20px; float:right; width:190px;border:black 1px solid;}
+.myReport #reportList #listTitle #monthReport {background-color:rgb(50, 108, 249); color:white; font-size:20px; float:left; width:190px; border:rgb(50, 108, 249) 1px solid;}
+.myReport #reportList #listTitle #todayReport {font-size:20px; float:right; width:190px;border:rgb(101,101,101) 1px solid;}
 
 
-.myReport #reportList #reportContent {width:380px; height:100px; border:solid 1px #000000; margin:0px}
-.myReport #reportList #contentImg {width:90px; height:90px; border:solid 1px #000000; float:left;}
-.myReport #reportList #contentTitle {font-size:20px; font-weight:bold;line-height:30px;}
+.myReport #reportList #reportContent {width:380px; height:120px; border:solid 0.5px rgb(101,101,101); border-top:none; margin:0px; padding:10px 0px 0px 10px;}
+.myReport #reportList #contentImg {width:100px; height:100px; border:solid 1px #000000; float:left; margin-right:20px; }
+.myReport #reportList #contentTitle {font-size:20px; font-weight:bold;line-height:40px;}
 .myReport #reportList #content {font-size:18px; line-height:25px; }
-.myReport #reportList #contentDate {font-size:14px; color:gray; line-height:25px;}
+.myReport #reportList #contentDate {font-size:14px; color:gray; line-height:30px;}
 
 
 
