--- a/webapp/WEB-INF/views/my-page/menubar.html
+++ b/webapp/WEB-INF/views/my-page/menubar.html
@@ -50,7 +50,7 @@
 			
 			<div class="menu2">
 				<ol>
-					<li id="bookmark">즐겨찾기 <img id="bmStar" src="../../../assets/image/my-page/star.png"></li>
+					<li id="bookmark"><a href="./bookmark.html">즐겨찾기 <img id="bmStar" src="../../../assets/image/my-page/star.png"></a></li>
 					<li id="bookmark-btn">
 						<img id="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
 						<img id="minus-btn" src="../../../assets/image/my-page/minus.png">
