--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -40,9 +40,8 @@
 		
 		<div class="subHeader">
 			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
-			<p id="title">(즐겨찾기이름) 
-				<img id="myHome" src="../../../assets/image/my-page/star.png">&nbsp;
-				<a href=""><img id="edit-btn" src="../../../assets/image/my-page/edit.png"></a>
+			<p id="title">즐겨찾기 
+				<img id="myHome" src="../../../assets/image/my-page/star.png">
 			</p>
 		</div>
 		
