--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -23,7 +23,7 @@
 			
 			<br><br><br>
 			
-			<div id="">
+			<div class="">
 				<div id="to_make">
 					<button type="submit" id="together_make">함께하기 만들기</button>
 				</div>
@@ -38,79 +38,89 @@
 			
 			<br><br><br>
 			
-				<div>
-					<table>
-						<thead>
-							<tr>
-								<th class="line_top">2022/07/24 - 2022/07/30<img class="bookmark" src="../../../assets/image/together/bookmarks_black.png"></th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th>쭈쭈네 동네 한바퀴</th>
-							</tr>
-							<tr>
-								<th>신림 - 잠실</th>
-							</tr>
-							<tr>
-								<th class="line_bottom">
-									산책
-									<button type="submit">11/15</button>
-								</th>
-							</tr>
-						</tbody>
-					</table>
-				</div><!-- table -->
+			<div class="chart">
+				<table>
+					<thead>
+						<tr>
+							<th class="line_top">
+								2022/07/24 - 2022/07/30
+								<button class="bookmark">
+									<span class="glyphicon glyphicon-bookmark" id="mark"></span>
+								</button>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th>쭈쭈네 동네 한바퀴</th>
+						</tr>
+						<tr>
+							<th>신림 - 잠실</th>
+						</tr>
+						<tr>
+							<th class="line_bottom">
+								산책
+								<button type="submit">11/15</button>
+							</th>
+						</tr>
+					</tbody>
+				</table>
+			</div><!-- table -->
+			
+			<div class="chart">
+				<table>
+					<thead>
+						<tr>
+							<th class="line_top">
+								2022/07/24 - 2022/07/30
+								<button class="bookmark">
+									<span class="glyphicon glyphicon-bookmark" id="nomark"></span>
+								</button>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th>쭈쭈네 동네 한바퀴</th>
+						</tr>
+						<tr>
+							<th>신림 - 잠실</th>
+						</tr>
+						<tr>
+							<th class="line_bottom">
+								산책
+								<button type="submit">11/15</button>
+							</th>
+						</tr>
+					</tbody>
+				</table>
+			</div><!-- table -->
+
+			<div class="chart">
+				<table>
+					<thead>
+						<tr>
+							<th class="line_top">2022/07/24 - 2022/07/30</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th>쭈쭈네 동네 한바퀴</th>
+						</tr>
+						<tr>
+							<th>신림 - 잠실</th>
+						</tr>
+						<tr>
+							<th class="line_bottom">
+								산책
+								<button type="submit">11/15</button>
+							</th>
+						</tr>
+					</tbody>
+				</table>
+			</div><!-- table -->
 				
-				<div>
-					<table>
-						<thead>
-							<tr>
-								<th class="line_top">2022/07/24 - 2022/07/30</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th>쭈쭈네 동네 한바퀴</th>
-							</tr>
-							<tr>
-								<th>신림 - 잠실</th>
-							</tr>
-							<tr>
-								<th class="line_bottom">
-									산책
-									<button type="submit">11/15</button>
-								</th>
-							</tr>
-						</tbody>
-					</table>
-				</div><!-- table -->
-	
-				<div>
-					<table>
-						<thead>
-							<tr>
-								<th class="line_top">2022/07/24 - 2022/07/30</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th>쭈쭈네 동네 한바퀴</th>
-							</tr>
-							<tr>
-								<th>신림 - 잠실</th>
-							</tr>
-							<tr>
-								<th class="line_bottom">
-									산책
-									<button type="submit">11/15</button>
-								</th>
-							</tr>
-						</tbody>
-					</table>
-				</div><!-- table -->
-				
-				<br><br><br><br><br><br><br><br>
+			<br><br><br><br><br><br><br><br>
 				
 			<div>
 				<button type="submit" id="more">⏷</button>
